--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -26,6 +26,7 @@
         <ul class="nav navbar-nav">
           <li class=""><a href="/control">Home</a></li>
           <li class=""><a href="{{ url_for('.users') }}">Users</a></li>
+          <li class=""><a href="{{ url_for('.urls') }}">URLs</a></li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
@@ -67,6 +68,9 @@
     </div> <!-- /.container -->
 <script src=https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script type="application/javascript">
+{% block page_script %}{% endblock %}
+</script>
 </body>
 </html>
 
