--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -1,6 +1,6 @@
 
 {%macro contactForm(rowClass="") %}
-
+{% if config.SITE_THEME == 'blocked-uk' %}
 <div class="row {{rowClass}}">
 <div class="col-md-6">
 <h3>Stay informed</h3>
@@ -18,6 +18,7 @@
 
 </div>
 </div>
+{% endif %}
 {%endmacro%}
 
 {%macro contactChunk() %}
