additional dead site option; openrightsgroup/blocked-org-uk#319

--- a/BlockedFrontend/templates/unblock/feedback.html
+++ b/BlockedFrontend/templates/unblock/feedback.html
@@ -52,6 +52,14 @@
 <div class="form-group">
 <div class="checkbox">
   <label>
+    <input type="checkbox" value="parked" name="report_type" />
+    Site is showing a registrar/hosting provider holding page
+  </label>
+</div>
+</div>
+<div class="form-group">
+<div class="checkbox">
+  <label>
     <input type="checkbox" value="sale" name="report_type" />
     Site domain is for sale
   </label>
