add allow contact checkbox; openrightsgroup/blocked-org-uk#317

--- a/BlockedFrontend/templates/unblock/unblock2.html
+++ b/BlockedFrontend/templates/unblock/unblock2.html
@@ -69,6 +69,14 @@
 </div>
 </div>
 
+<div class="form-group">
+<div class="checkbox">
+  <label>
+    <input type="checkbox" value="1" checked="checked" name="allow_contact"/>
+    Allow ORG to contact me about this report
+  </label>
+</div>
+</div>
 
 <div class="form-group">
 <div class="checkbox">
