Show expiry times in domain admin

--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -70,7 +70,7 @@
                     <h4 style="padding: 0.25em; background-color: {{'lightblue' if sitegrp else 'lightgray'}}">
                         {{sitegrp or 'Uncategorized'}}
                     </h4>
-                    <table>
+                    <table class="table">
                     {% for site in grpsites %}
                         <tr>
                             <td>
