Show expiry times in domain admin

--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -71,6 +71,12 @@
                         {{sitegrp or 'Uncategorized'}}
                     </h4>
                     <table class="table">
+                        <tr>
+                            <th></th>
+                            <th>URL</th>
+                            <th>Whois Expiry</th>
+                            <th></th>
+                        </tr>
                     {% for site in grpsites %}
                         <tr>
                             <td>
