--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -96,7 +96,7 @@
   <label for="url">Website address</label>
   <div class="control-group">
     <div class="input-group">
-    <input type="text"  placeholder="http://" name="url" id="url" class="form-control" />
+    <input type="text"  placeholder="http://" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" name="url" id="url" class="form-control" />
     <span class="input-group-btn">
     <input type="submit" value="Check site" class="btn btn-primary" />
     </span>
