--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -28,6 +28,7 @@
           <li class=""><a href="{{ url_for('.users') }}">Users</a></li>
           <li class=""><a href="{{ url_for('.urls') }}">URLs</a></li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
+          <li class=""><a href="{{ url_for('.tests') }}">Test Schedule</a></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
               <ul class="dropdown-menu">
