--- a/BlockedFrontend/templates/admin/tests_edit.html
+++ b/BlockedFrontend/templates/admin/tests_edit.html
@@ -16,11 +16,10 @@
 
         <div class="row">
             <div class="col-md-6">
-                <h3>Tags</h3>
+                <h3>URL Source</h3>
+                <input type="radio" name="source" value="tag" {{ 'checked' if test.tags else '' }}/>
                 {{ forms.select_field('Tag', 'tag', test.tag, ['']+tags) }}
-            </div>
-            <div class="col-md-6">
-                <h3>Filter</h3>
+                <input type="radio" name="source" value="query" {{ 'checked' if test.filter else '' }} />
                 {{ forms.select_field('Filter set', 'filter', test.filter, ['']+filters) }}
             </div>
         </div>
