--- a/BlockedFrontend/templates/451/451.html
+++ b/BlockedFrontend/templates/451/451.html
@@ -1,24 +1,46 @@
+{%macro field(s)%}
+<span class="field">{{s|safe}}</span>
+{%endmacro%}
 <html>
 <head>
     <title>{{site}} :: 451 Unavailable fro legal reasons</title>
+    <style type="text/css">
+        .field {
+            background-color: #dedede;
+        }
+        h1 {
+            background-color: #eeeeee;
+            margin: -20px;
+            margin-bottom: 1em;
+            padding: 0.5em
+        }
+        body {
+            margin: 20px;
+            font-size: large;
+        }
+        li {
+            margin-bottom: 0.5em;
+        }
+    </style>
 </head>
 <body>
 <h1>Error 451: Unavailable For Legal Reasons</h1>
 
 <h2>{{site}}</h2>
 
-<p>Access to this domain has been restricted in the United Kingdom at {{ networks|join_en }} following a
-    Court Order {{site}}/{{ judgment.case_number }} and Judgment {{ judgment.citation }}.</p>
+<p>Access to this domain has been restricted in the United Kingdom at {{ field(networks|join_en) }} following a
+    Court Order {{field(site)}}/{{ field(judgment.case_number) }} and Judgment {{ field(judgment.citation) }}.</p>
 
-<p>This Court Order was imposed under the <!-- Copyright, Designs and Patents Act 1988 --> {{power.name}}.
-    The Court Order was issued on {{ orders|attr('date')|first }} and is valid until [Court Order Expiration Date].</p>
+<p>
+    {% if power %}This Court Order was imposed under the <!-- Copyright, Designs and Patents Act 1988 --> {{field(power.name)}}.{% endif %}
+    The Court Order was issued on {{ field(orders|map(attribute='date')|first|fmdate) }} and is valid until [Court Order Expiration Date].</p>
 
-<p>The Court Order was obtained by {{judgment.injunction_obtained_by}}. In case of error, such as a domain mistakenly
+<p>The Court Order was obtained by {{field(judgment.injunction_obtained_by)}}. In case of error, such as a domain mistakenly
 identified that should not be blocked under this Order, you may contact them directly via [website contact page].
-    Errors cannot be corrected by {{ networks|join_en }}.</p>
+    Errors cannot be corrected by {{ field(networks|join_en) }}.</p>
 
 <p>If you believe this that this web domain has been incorrectly blocked, and wish to challenge the order
-itself, you can contact the {{ judgment.court_authority|replace('_',' ')|title }} <!-- at [the appropriate legal authority] or
+itself, you can contact the {{ field(judgment.court_authority|replace('_',' ')|title) }} <!-- at [the appropriate legal authority] or
     [the address of the appropriate legal authority] -->.</p>
 
 <p>You have the right to apply to the High Court to vary or discharge the Orders if you are affected
