--- a/BlockedFrontend/templates/451/451.html
+++ b/BlockedFrontend/templates/451/451.html
@@ -50,7 +50,7 @@
     you may contact them directly via [website contact page].
     Errors cannot be corrected by {{ field(networks|join_en) }}.</p>
 
-<p>If you believe this that this web domain has been incorrectly blocked, and wish to challenge the order
+<p>If you believe that this web domain has been incorrectly blocked, and wish to challenge the order
 itself, you can contact the {{ field(judgment.court_authority|replace('_',' ')|title) }} <!-- at [the appropriate legal authority] or
     [the address of the appropriate legal authority] -->.</p>
 
